# gpu-text-render

./: CMakeLists.txt
include/: font_asset.h  font_database.h  gpu_atlas_manager.h  gpu_command_buffer.h  gpu_device.h  gpu_renderer_cuda.h  image_io.h  render_plan.h  render_request.h  render_scene.h  text_layout.h  text_render_types.h  text_renderer_cpu.h
reference/: benchmark_text_renderer_gpu_async.py
src/: benchmark_render_scene.cpp  font_asset_compiler.cpp  font_database.cpp  gpu_atlas_manager.cpp  gpu_command_buffer.cpp  gpu_device.cpp  gpu_renderer_cuda.cu  image_io.cpp  python_gpu_font_planner.cpp  render_plan.cpp  render_request.cpp  render_scene.cpp  render_scene_preview.cpp  skyline_packer.h  text_layout.cpp  text_renderer_cpu.cpp  triton_text_renderer_backend.cpp  triton_text_renderer_gpu_backend.cpp
tests/: test_font_asset_abi.cpp  test_font_database.cpp  test_gpu_command_buffer.cpp  test_gpu_device.cpp  test_gpu_font_planner.py  test_gpu_renderer_cuda.cpp  test_image_io.cpp  test_render_plan.cpp  test_render_request.cpp  test_render_scene.cpp  test_text_layout.cpp  test_text_render_types.cpp  test_text_renderer_cpu.cpp
triton/: README.md
triton/model_repository/text_renderer/: config.pbtxt
triton/model_repository/text_renderer_gpu/: config.pbtxt
